* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.12
- add missing qt5-qtsensors dependency on Fedora
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.11
- fix Qt 5 GUI icon & naim in desktop file on Fedora
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.10
- add the qt5-qtquickcontrols dependency on Fedora
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.9
- fix the modrana-gtk startup script on Fedora
* Fri Oct 31 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.8
- exclude Monav binaries from the Fedora package
* Thu Oct 23 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.7
- fix the compass rose not showing up in the Qt 5 GUI on Sailfish OS
* Tue Oct 21 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.6
- generate correct (Python 3.4) bytecode for the Sailfish OS package
 - makes modRana Python part startup almost 2 times faster (~3.8s->~2s) ! :)
- make location and map page in Qt 5 GUI asynchronous
 - this should make the startup even faster and more seemless
- add a fade in & out animation for the startup indicator in Qt 5 GUI
* Sun Oct 19 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.5
- fix a typo breaking modRana startup on Sailfish OS
* Sat Oct 18 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.4
- support for keeping screen on for Sailfish OS
 - enabled by default
 - can be turned on/off in Options->UI
- fully asynchronous Qt 5 GUI startup
 - the Qt 5 GUI startup should now be faster and feedback is provided to the user during the whole startup
 - the Bitcon button now works again in the Qt 5 GUI
- the Gratipay donation button has been added to the Qt 5 GUI
- fixed sizes & font sizes of donation buttons
- modRana now supports log file compression with gzip
 - preliminary testing shows about 60% log size reduction when enabled :) 
 - GTK GUI: Options->Debug->Logging
 - Qt 5 GUI: Options->Logging
- print full path to the log file when disabling it