@@ -1,3 +1,31 @@
+modrana (0.50.1) stable; urgency=low
+
+  * Wed Dec 31 2014 Martin Kolman <martin.kolman@gmail.com> - 0.50.1
+  *  
+  * layer timeout support (Frederic Ferner)
+  *   
+  * dynamic map layers (traffic, weather, etc.) now automatically load new tiles once the oled ones time out
+  *   
+  * not yet handles staring at the same part of map for hours
+  *   
+  * you need to move the map a bit so that the tiles are requested again & refetched
+  *  
+  * support for setting network usage mode in Qt 5 GUI (Frederic Ferner)
+  *   
+  * max - unlimited network usage
+  *   
+  * minimal - no automatic tile download
+  *  
+  * Thanks a lot to Frederic for these nice two patches! :)
+  *  
+  * fix text sizing on icon grid
+  *  
+  * fix compass rose display with qrc (Android)
+  *   
+  * it still does not rotate on Android some reason :)
+
+ -- Martin Kolman <martin.kolman@gmail.com>  Wed, 31 Dec 2014 15:09:22 +0000
+
 modrana (0.49.7) stable; urgency=low
 
   * Thu Oct 23 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.7
